# alfresco-ansible-collection

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  galaxy.yml  index.html  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build.yml  docs.yml
alfresco/platform/: CHANGELOG.md  galaxy.yml
branch/main/: audit_storage_role.html  environment_variables.html  hxi_connector_role.html  index.html  java_role.html  objects.inv  search.html  search_community_role.html  searchindex.js  systemd_service_role.html
changelogs/: .plugin-cache.yaml  audit_storage-role.yaml  changelog.yaml
changelogs/fragments/: audit_storage-role.yaml  audit_storage_user-role.yaml  common-arg-spec.yaml  community_general.yaml  hxi_connector-role.yaml  mandatory-args.yml  optional-handler.yml  search_community-role.yaml  search_community-transform-url.yaml  search_index-role.yaml  systemd_service-environment-file.yaml  systemd_service.yaml
playbooks/: download_verify_checksum.yml
playbooks/tasks/: download.yml
plugins/: README.md
pr/10/: search.html
pr/12/: environment_variables.html  objects.inv  searchindex.js  systemd_service_role.html
pr/13/: hxi_connector_role.html  objects.inv  searchindex.js
pr/14/: systemd_service_role.html
pr/16/: searchindex.js
pr/17/: hxi_connector_role.html
pr/18/: hxi_connector_role.html
pr/19/: hxi_connector_role.html  searchindex.js
pr/20/: searchindex.js
pr/21/: hxi_connector_role.html  objects.inv  searchindex.js
pr/22/: index.html
pr/23/: searchindex.js  (+1 more)
pr/3/: index.html  (+5 more)
(+187 files in other folders)
