[project]
name = "alfresco-ansible-collections"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ansible-core==2.16.14",
    "ansible-lint==25.2.1",
    "antsibull-changelog==0.33.0",
    "molecule==24.12.0",
    "molecule-plugins[docker]==23.6.0",
    "antsibull-docs==2.16.3",
    "sphinx-ansible-theme==0.10.3",
]
