[project]
name = "alfresco-ansible-collection"
version = "0.1.0"
description = "alfresco.platform ansible collection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ansible-core==2.16.14",
    "ansible-lint==25.4.0",
    "antsibull-changelog==0.33.0",
    "molecule==24.12.0",
    "molecule-plugins[docker]==23.6.0",
    "antsibull-docs==2.19.1",
    "sphinx-ansible-theme==0.10.3",
]
